adding assessments placeholder file and reorg of chapter order

--- a/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
@@ -19,26 +19,39 @@
 				<li><a href="preface.xhtml#P70004858060006A7">Preface</a><ol class="nomark">
 						<li><a href="preface.xhtml#P70004858060006A9">Preface Subsection</a></li>
 					</ol></li>
-				<li><a href="vol01.xhtml">Volume I: Part Title </a>
+				<li><a href="vol01.xhtml">Volume I: Volume Title </a>
 					<ol class="nomark">
 						<li><a href="part01.xhtml">Part I: Part Title </a>
 							<ol class="nomark">
-								<li><a href="asides.xhtml#P70004858060006F9">Chapter 1: Asides</a><ol class="nomark">
-									<li><a href="asides.xhtml#P70004858060006FB">1.1 Sidebars</a><ol hidden="hidden">
-										<li><a href="asides.xhtml#P7000485806000702">Sidebar Practice Section Label
-										</a></li>
+								<li><a href="body-content.xhtml#P700048580600075C"> Chapter 1: Typical Chapter Content</a><ol class="nomark">
+									<li><a href="body-content.xhtml#P700048580600075E">1.1 Introduction Section
+										Label</a></li>
+									<li><a href="body-content.xhtml#P7000485806000760"> 1.2 Learning Objectives Section
+										Label </a></li>
+									<li><a href="body-content.xhtml#P7000485806000766">1.3 Case Study Case Study Title
+									</a></li>
+									<li><a href="body-content.xhtml#d6e5627">1.4 Section Heading</a><ol hidden="hidden">
+										<li><a href="body-content.xhtml#d6e5641"> 1.4.1 Example 1 </a></li>
+										<li><a href="body-content.xhtml#P7000485806000767"> 1.4.2 Feature Section
+										</a><ol class="nomark">
+											<li><a href="body-content.xhtml#P7000485806000769"> feature section
+												heading</a></li>
+										</ol></li>
 									</ol></li>
-									<li><a href="asides.xhtml#P700048580600070C">1.2 Footnotes</a></li>
-									<li><a href="asides.xhtml#P700048580600070D">1.3 Endnotes</a><ol hidden="hidden">
-										<li><a href="asides.xhtml#P70004858060000000000000002226F6"> 1.3.1 Chapter
-											Endnotes</a></li>
-										<li><a href="asides.xhtml#P70004858060000000000000001116F6"> 1.3.2 Book
-											Endnotes</a></li>
+									<li><a href="body-content.xhtml#d6e5727">1.5 Blockquotes</a></li>
+									<li><a href="body-content.xhtml#P700048580600076D">1.6 Misc Other Structures</a><ol
+										hidden="hidden">
+										<li><a href="body-content.xhtml#P700048580600076E"> Abstract</a><ol
+											hidden="hidden"></ol></li>
 									</ol></li>
-									<li><a href="asides.xhtml#P7000485806000713">1.4 Pullquote</a></li>
-									<li><a href="asides.xhtml#P7000485806000716">1.5 Annotation</a></li>
-									<li><a href="asides.xhtml#P7000485806000771">1.6 Notices</a></li>
-									<li><a href="asides.xhtml#P7000485806000719">1.7 Chapter Endnote List</a></li>
+									<li><a href="body-content.xhtml#P7000485806000774">1.7 Misc</a></li>
+									<li><a href="body-content.xhtml#P7000485806000775">1.8 Conclusion Section</a><ol
+										hidden="hidden">
+										<li><a href="body-content.xhtml#P7000485806000776"> Conclusion sub-section</a></li>
+									</ol></li>
+									<li><a href="body-content.xhtml#P7000485806000777">1.9 Answers</a></li>
+									<li><a href="body-content.xhtml#P7000485806000778">1.10 Exercises</a></li>
+									<li><a href="body-content.xhtml#P700048580600077A">1.11 Keywords</a></li>
 								</ol></li>
 								<li><a href="figures-tables.xhtml#P700048580600071E">Chapter 2: Figures and Tables</a><ol
 									class="nomark">
@@ -46,43 +59,32 @@
 									<li><a href="figures-tables.xhtml#P7000485806000728">2.2 Figure containing a
 										Table</a></li>
 								</ol></li>
-								<li><a href="links.xhtml#P7000485806000731">Chapter 3: Linked Content</a><ol class="nomark">
-									<li><a href="links.xhtml#P7000485806000733">3.1 General Cross-reference</a></li>
-									<li><a href="links.xhtml#P7000485806000734">3.2 Keyword Cross-reference</a></li>
-									<li><a href="links.xhtml#P700048580600073A">3.3 Bibliographic reference</a></li>
-									<li><a href="links.xhtml#P700048580600073F">3.4 Hyperlink to internet content</a></li>
-									<li><a href="links.xhtml#P7000485806000742">3.5 Page cross-reference</a></li>
-								</ol></li>
-								<li><a href="body-content.xhtml#P700048580600075C"> Chapter 4: Typical Chapter Content</a><ol class="nomark">
-										<li><a href="body-content.xhtml#P700048580600075E">4.1 Introduction Section
-											Label</a></li>
-										<li><a href="body-content.xhtml#P7000485806000760"> 4.2 Learning Objectives Section
-											Label </a></li>
-										<li><a href="body-content.xhtml#P7000485806000766">4.3 Case Study Case Study Title
+								<li><a href="asides.xhtml#P70004858060006F9">Chapter 3: Asides</a><ol class="nomark">
+									<li><a href="asides.xhtml#P70004858060006FB">3.1 Sidebars</a><ol hidden="hidden">
+										<li><a href="asides.xhtml#P7000485806000702">Sidebar Practice Section Label
 										</a></li>
-										<li><a href="body-content.xhtml#d6e5627">4.4 Section Heading</a><ol hidden="hidden">
-											<li><a href="body-content.xhtml#d6e5641"> 4.4.1 Example 1 </a></li>
-											<li><a href="body-content.xhtml#P7000485806000767"> 4.4.2 Feature Section
-											</a><ol class="nomark">
-												<li><a href="body-content.xhtml#P7000485806000769"> feature section
-													heading</a></li>
-											</ol></li>
-										</ol></li>
-										<li><a href="body-content.xhtml#d6e5727">4.5 Blockquotes</a></li>
-										<li><a href="body-content.xhtml#P700048580600076D">4.6 Misc Other Structures</a><ol
-											hidden="hidden">
-											<li><a href="body-content.xhtml#P700048580600076E"> Abstract</a><ol
-												hidden="hidden"></ol></li>
-										</ol></li>
-										<li><a href="body-content.xhtml#P7000485806000774">4.7 Misc</a></li>
-										<li><a href="body-content.xhtml#P7000485806000775">4.8 Conclusion Section</a><ol
-											hidden="hidden">
-											<li><a href="body-content.xhtml#P7000485806000776"> Conclusion sub-section</a></li>
-										</ol></li>
-										<li><a href="body-content.xhtml#P7000485806000777">4.9 Answers</a></li>
-										<li><a href="body-content.xhtml#P7000485806000778">4.10 Exercises</a></li>
-										<li><a href="body-content.xhtml#P700048580600077A">4.11 Keywords</a></li>
 									</ol></li>
+									<li><a href="asides.xhtml#P700048580600070C">3.2 Footnotes</a></li>
+									<li><a href="asides.xhtml#P700048580600070D">3.3 Endnotes</a><ol hidden="hidden">
+										<li><a href="asides.xhtml#P70004858060000000000000002226F6"> 3.3.1 Chapter
+											Endnotes</a></li>
+										<li><a href="asides.xhtml#P70004858060000000000000001116F6"> 3.3.2 Book
+											Endnotes</a></li>
+									</ol></li>
+									<li><a href="asides.xhtml#P7000485806000713">3.4 Pullquote</a></li>
+									<li><a href="asides.xhtml#P7000485806000716">3.5 Annotation</a></li>
+									<li><a href="asides.xhtml#P7000485806000771">3.6 Notices</a></li>
+									<li><a href="asides.xhtml#P7000485806000719">3.7 Chapter Endnote List</a></li>
+								</ol></li>
+								<li><a href="assessments.xhtml#P7000485806009000">Chapter 4: Assessments</a><ol class="nomark">
+								</ol></li>
+								<li><a href="links.xhtml#P7000485806000731">Chapter 5: Linked Content</a><ol class="nomark">
+									<li><a href="links.xhtml#P7000485806000733">5.1 General Cross-reference</a></li>
+									<li><a href="links.xhtml#P7000485806000734">5.2 Keyword Cross-reference</a></li>
+									<li><a href="links.xhtml#P700048580600073A">5.3 Bibliographic reference</a></li>
+									<li><a href="links.xhtml#P700048580600073F">5.4 Hyperlink to internet content</a></li>
+									<li><a href="links.xhtml#P7000485806000742">5.5 Page cross-reference</a></li>
+								</ol></li>
 							</ol>
 						</li>
 					</ol>
@@ -116,13 +118,16 @@
 			<h1>Brief TOC</h1>
 			<ol class="nomark">
 				<li><a href="preface.xhtml#P70004858060006A7">Preface</a></li>
-				<li><a href="part01.xhtml#P70004858060006B5">Part 1 Part Title</a>
-					<ol class="tocentrylist">
-						<li><a href="asides.xhtml#P70004858060006F9">Chapter 2 Asides</a></li>
-						<li><a href="figures-tables.xhtml#P700048580600071E">Chapter 3 Figures and Tables</a></li>
-						<li><a href="links.xhtml#P7000485806000731">Chapter 4 Linked Content</a></li>
-						<li><a href="body-content.xhtml#P700048580600075C">Chapter 6 Typical Chapter Frontmatter and
-								Backmatter Sections</a></li>
+				<li><a href="vol01.xhtml#P70004858060006BF">Volume 1: Volume Title</a>
+					<ol>
+						<li><a href="part01.xhtml#P70004858060006B5">Part 1: Part Title</a>
+						<ol class="tocentrylist">
+							<li><a href="body-content.xhtml#P700048580600075C">Chapter 1: Typical Chapter Content</a></li>
+						<li><a href="figures-tables.xhtml#P700048580600071E">Chapter 2: Figures and Tables</a></li>
+							<li><a href="asides.xhtml#P70004858060006F9">Chapter 3: Asides</a></li>
+							<li><a href="links.xhtml#P7000485806000731">Chapter 5: Linked Content</a></li>
+					</ol>
+					</li>
 					</ol>
 				</li>
 				<li><a href="appendix-a.xhtml#P70004858060007A3">Appendix A Title</a></li>
@@ -136,15 +141,15 @@
 		</nav>
 		<nav id="illustrations" epub:type="loi">
 			<h2>List of Illustrations</h2><ol class="nomark">
-				<li><a href="figures-tables.xhtml#P7000485806000721"> Figure 3.1 Figure Title </a></li>
+				<li><a href="figures-tables.xhtml#P7000485806000721"> Figure 2.1 Figure Title </a></li>
 			</ol>
 		</nav>
 		<nav id="tables" epub:type="lot">
 			<h2>List of Tables</h2><ol class="nomark">
-				<li><a href="asides.xhtml#P70004858060006FF">Table 2.1 This is the table title</a></li>
-				<li><a href="figures-tables.xhtml#P7000485806000729">Table 3.1 Table Title</a></li>
-				<li><a href="figures-tables.xhtml#P700048580600072A"> Table 3.2 Kirton Adaption-Innovation
+				<li><a href="figures-tables.xhtml#P7000485806000729">Table 2.1 Table Title</a></li>
+				<li><a href="figures-tables.xhtml#P700048580600072A"> Table 2.2 Kirton Adaption-Innovation
 						Inventory </a></li>
+				<li><a href="asides.xhtml#P70004858060006FF">Table 3.1 This is the table title</a></li>
 			</ol>
 		</nav>
 		<nav id="landmarks" epub:type="landmarks">
