--- a/samples/structure-sample-01/EPUB/xhtml/body-content.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/body-content.xhtml
@@ -273,48 +273,42 @@
 							conclusion text. This is conclusion text. </p>
 					</section>
 				</section>
-				<section epub:type="answers" id="P7000485806000777" class="level1">
-					<header>
-						<h3>1.9 Answers</h3>
-					</header>
-					<ol>
-						<li epub:type="answer" id="P70004858060006EB">
-							<p>This is an answer.</p></li>
-						<li epub:type="answer" id="P70004858060006EC"><p>This is an answer.</p></li>
-						<li epub:type="answer" id="P70004858060006ED"><p>This is an answer.</p></li>
-						<li epub:type="answer" id="P70004858060006EE"><p>This is an answer.</p></li>
-					</ol>
-				</section>
 				<section epub:type="practices" id="P7000485806000778" class="level1">
 					<header>
-						<h3 id="P7000485806000779">1.10 Exercises</h3>
+						<h3 id="P7000485806000779">1.9 Exercises</h3>
 					</header>
 					<div class="instructions"><p>These are instructions for the assessment section. These are
 							instructions for the assessment section.</p></div>
 					<ol>
 						<li id="P70004858060006DE">
 							<div epub:type="question" id="P70004858060006DF">
-								<p><a href="#P70004858060006EB">This is a general-problem that links to answer 1 in answerlist later in chapter. </a></p>
+								<p><a href="#P70004858060006EB">This is a question that links to answer 1 in the answer list. </a></p>
+								<p epub:type="feedback">This is feedback on the correct answer that would be dynamically displayed.</p>
 							</div>
 						</li>
 						<li epub:type="true-false-problem" id="P70004858060006E0">
 							<div epub:type="question" id="P70004858060006E1">
-								<p><a href="#P70004858060006EC">This is a general-problem that links to answer 1 in answerlist later in chapter.</a></p>
+								<p><a href="#P70004858060006EC">This is a true/false question that links to answer 2 in the answer list.</a></p>
 							</div>
 						</li>
-						<li epub:type="fill-in-the-blank-problem" id="P70004858060006E2"><div
-								epub:type="question" id="P70004858060006E3">
-								<p><a href="#P70004858060006ED">This is a general-problem that links to answer 1 in answerlist later in chapter.</a></p>
+						<li epub:type="fill-in-the-blank-problem" id="P70004858060006E2">
+							<div epub:type="question" id="P70004858060006E3">
+								<p><a href="#P70004858060006ED">This is a fill-in-the-blank problem that links to answer 3 in the answer list.</a></p>
 							</div>
 						</li>
-						<li epub:type="multiple-choice-problem" id="P70004858060006E4"><div epub:type="question"
-								id="P70004858060006E5">
-								<p><a href="#P70004858060006EE">This is a general-problem that links to answer 1 in answerlist later in chapter.</a></p>
+						<li epub:type="multiple-choice-problem" id="P70004858060006E4">
+							<div epub:type="question" id="P70004858060006E5">
+								<p><a href="#P70004858060006EE">This is a multiple-choice problem that links to answer 4 in the answer list.</a></p>
 								<ol class="choices">
 									<li><p>Multiple choice option</p></li>
 									<li><p>Multiple choice option</p></li>
 									<li><p>Multiple choice option</p></li>
 								</ol>
+							</div>
+						</li>
+						<li epub:type="general-problem" id="P70004858060006E7">
+							<div epub:type="question" id="P70004858060006E8">
+								<p><a href="#P70004858060006EF">This is a general problem that links to answer 5 in the answer list.</a></p>
 							</div>
 						</li>
 					</ol>
@@ -323,7 +317,7 @@
 							<h4>1.10.1 Practice Subsection</h4>
 						</header>
 						<ol>
-							<li><p>This is a general-problem.</p></li>
+							<li><p>This is a match problem.</p></li>
 							<li epub:type="match-problem" id="P70004858060006E6">
 								<div epub:type="question"><table>
 										<tr>
@@ -343,7 +337,7 @@
 				</section>
 				<section id="P700048580600077A" class="level1">
 					<header>
-						<h3>1.11 Keywords </h3>
+						<h3>1.10 Keywords </h3>
 					</header>
 					<ol epub:type="keywords">
 
@@ -359,6 +353,19 @@
 
 						<li><p><a epub:type="keyword" id="P70004858060006DC" href="links.xhtml#P7000485806000738"
 									>keyword 4 </a></p></li>
+					</ol>
+				</section>
+				<section epub:type="answers" id="P7000485806000777" class="level1">
+					<header>
+						<h3>1.11 Answers</h3>
+					</header>
+					<ol>
+						<li epub:type="answer" id="P70004858060006EB">
+							<p>This is an answer.</p></li>
+						<li epub:type="answer" id="P70004858060006EC"><p>This is an answer.</p></li>
+						<li epub:type="answer" id="P70004858060006ED"><p>This is an answer.</p></li>
+						<li epub:type="answer" id="P70004858060006EE"><p>This is an answer.</p></li>
+						<li epub:type="answer" id="P70004858060006EF"><p>This is an answer.</p></li>
 					</ol>
 				</section>
 			</section>
