--- a/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
@@ -49,9 +49,10 @@
 										hidden="hidden">
 										<li><a href="body-content.xhtml#P7000485806000776"> Conclusion sub-section</a></li>
 									</ol></li>
-									<li><a href="body-content.xhtml#P7000485806000778">1.9 Exercises</a></li>
-									<li><a href="body-content.xhtml#P700048580600077A">1.10 Keywords</a></li>
-									<li><a href="body-content.xhtml#P7000485806000777">1.11 Answers</a></li>
+									<li><a href="body-content.xhtml#P7000485806000781">1.9 Additional Resources</a></li>
+									<li><a href="body-content.xhtml#P7000485806000778">1.10 Exercises</a></li>
+									<li><a href="body-content.xhtml#P700048580600077A">1.11 Keywords</a></li>
+									<li><a href="body-content.xhtml#P7000485806000777">1.12 Answers</a></li>
 								</ol></li>
 								<li><a href="figures-tables.xhtml#P700048580600071E">Chapter 2: Figures and Tables</a><ol
 									class="nomark">
