--- a/samples/structure-sample-01/EPUB/xhtml/body-content.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/body-content.xhtml
@@ -273,71 +273,76 @@
 							conclusion text. This is conclusion text. </p>
 					</section>
 				</section>
+				<section epub:type="learning-resources" id="P7000485806000781" class="level1">
+					<header>
+						<h3>1.9 Additional Resources</h3>
+					</header>
+					<p>The following list provides links to additional learning resources:</p>
+					<ul>
+						<li epub:type="learning-resource"><a href="http://www.example.com/video">Link to an external video</a></li>
+						<li epub:type="learning-resource"><a href="http://www.example.com/page">Link to an external web page</a></li>
+					</ul>
+				</section>
 				<section epub:type="practices" id="P7000485806000778" class="level1">
 					<header>
-						<h3 id="P7000485806000779">1.9 Exercises</h3>
+						<h3 id="P7000485806000779">1.10 Exercises</h3>
 					</header>
-					<div class="instructions"><p>These are instructions for the assessment section. These are
-							instructions for the assessment section.</p></div>
-					<ol>
-						<li id="P70004858060006DE">
-							<div epub:type="question" id="P70004858060006DF">
-								<p><a href="#P70004858060006EB">This is a question that links to answer 1 in the answer list. </a></p>
-								<p epub:type="feedback">This is feedback on the correct answer that would be dynamically displayed.</p>
-							</div>
-						</li>
-						<li epub:type="true-false-problem" id="P70004858060006E0">
-							<div epub:type="question" id="P70004858060006E1">
-								<p><a href="#P70004858060006EC">This is a true/false question that links to answer 2 in the answer list.</a></p>
-							</div>
-						</li>
-						<li epub:type="fill-in-the-blank-problem" id="P70004858060006E2">
-							<div epub:type="question" id="P70004858060006E3">
-								<p><a href="#P70004858060006ED">This is a fill-in-the-blank problem that links to answer 3 in the answer list.</a></p>
-							</div>
-						</li>
-						<li epub:type="multiple-choice-problem" id="P70004858060006E4">
-							<div epub:type="question" id="P70004858060006E5">
-								<p><a href="#P70004858060006EE">This is a multiple-choice problem that links to answer 4 in the answer list.</a></p>
-								<ol class="choices">
-									<li><p>Multiple choice option</p></li>
-									<li><p>Multiple choice option</p></li>
-									<li><p>Multiple choice option</p></li>
-								</ol>
-							</div>
-						</li>
-						<li epub:type="general-problem" id="P70004858060006E7">
-							<div epub:type="question" id="P70004858060006E8">
-								<p><a href="#P70004858060006EF">This is a general problem that links to answer 5 in the answer list.</a></p>
-							</div>
-						</li>
-					</ol>
-					<section epub:type="practice" id="P7000485806001456" class="level2">
+					<section epub:type="practice" id="P7000485806000780" class="level2">
 						<header>
-							<h4>1.10.1 Practice Subsection</h4>
+							<h4>Exercise 1</h4>
 						</header>
+						<div class="instructions"><p>These are instructions for the assessment section. These are
+							instructions for the assessment section.</p></div>
 						<ol>
-							<li><p>This is a match problem.</p></li>
-							<li epub:type="match-problem" id="P70004858060006E6">
-								<div epub:type="question"><table>
+							<li epub:type="general-problem" id="P70004858060006DE">
+								<div epub:type="question" id="P70004858060006DF">
+									<p><a href="#P70004858060006EB">This is a general problem that links to answer 1 in the answer list. </a></p>
+									<p epub:type="feedback">This is feedback on the correct answer that would be dynamically displayed.</p>
+								</div>
+							</li>
+							<li epub:type="true-false-problem" id="P70004858060006E0">
+								<div epub:type="question" id="P70004858060006E1">
+									<p><a href="#P70004858060006EC">This is a true/false question that links to answer 2 in the answer list.</a></p>
+								</div>
+							</li>
+							<li epub:type="fill-in-the-blank-problem" id="P70004858060006E2">
+								<div epub:type="question" id="P70004858060006E3">
+									<p><a href="#P70004858060006ED">This is a fill-in-the-blank problem that links to answer 3 in the answer list.</a></p>
+								</div>
+							</li>
+							<li epub:type="multiple-choice-problem" id="P70004858060006E4">
+								<div epub:type="question" id="P70004858060006E5">
+									<p><a href="#P70004858060006EE">This is a multiple-choice problem that links to answer 4 in the answer list.</a></p>
+									<ol class="choices">
+										<li><p>Multiple choice option</p></li>
+										<li><p>Multiple choice option</p></li>
+										<li><p>Multiple choice option</p></li>
+									</ol>
+								</div>
+							</li>
+								<li epub:type="match-problem" id="P70004858060006E6">
+									<p><a href="#P70004858060006EF">This is a match problem that links to answer 4 in the answer list.</a></p>
+									<div epub:type="question">
+										<table>
 										<tr>
 											<td><ol class="matchlist">
-													<li><p>This is matchlist 1.</p></li>
-													<li><p>This is matchlist 1.</p></li>
-												</ol></td>
+												<li><p>This is matchlist 1.</p></li>
+												<li><p>This is matchlist 1.</p></li>
+											</ol></td>
 											<td><ol class="matchlist">
-													<li><p>This is matchlist 2.</p></li>
-													<li><p>This is matchlist 2.</p></li>
-												</ol></td>
+												<li><p>This is matchlist 2.</p></li>
+												<li><p>This is matchlist 2.</p></li>
+											</ol></td>
 										</tr>
-									</table></div>
-							</li>
-						</ol>
+									</table>
+									</div>
+								</li>
+							</ol>
 					</section>
 				</section>
 				<section id="P700048580600077A" class="level1">
 					<header>
-						<h3>1.10 Keywords </h3>
+						<h3>1.11 Keywords </h3>
 					</header>
 					<ol epub:type="keywords">
 
@@ -357,7 +362,7 @@
 				</section>
 				<section epub:type="answers" id="P7000485806000777" class="level1">
 					<header>
-						<h3>1.11 Answers</h3>
+						<h3>1.12 Answers</h3>
 					</header>
 					<ol>
 						<li epub:type="answer" id="P70004858060006EB">
