Bridgehead and static list udpates
Added bridgehead to CSS
Added staticlist options to CSS
Added staticlist to content
Added keywords to content for vocabulary lists

--- a/samples/WCAG-ch1/EPUB/WCAG-ch1-2.xhtml
+++ b/samples/WCAG-ch1/EPUB/WCAG-ch1-2.xhtml
@@ -254,7 +254,7 @@
                             journals, and other documents, to find out about past events.</p>
                         <aside id="anno-p18-1" class="vocabulary">
                             <p>Vocabulary</p>
-                            <ul>
+                            <ul epub:type="keywords">
                                 <li>
                                     <i>orient:</i>
                                     <p>to become familiar with a situation</p>
@@ -372,7 +372,7 @@
                         <section id="d18656e408">
                             <aside id="anno-p19-1" class="vocabulary">
                                 <p>Vocabulary</p>
-                                <ul>
+                                <ul epub:type="keywords">
                                     <li>
                                         <i>totalitarian government:</i>
                                         <p>a government in which the rulers have total control</p>
@@ -396,7 +396,7 @@
                             </figure>
                             <aside id="anno-p20-1" class="vocabulary">
                                 <p>Vocabulary</p>
-                                <ul>
+                                <ul epub:type="keywords">
                                     <li>
                                         <i>naturalization:</i>
                                         <p>the process of becoming a citizen</p>
@@ -463,7 +463,7 @@
                             <span epub:type="pagebreak" title="21" id="p21"/>
                             <aside id="anno-p21-1" class="vocabulary">
                                 <p>Vocabulary</p>
-                                <ul>
+                                <ul epub:type="keywords">
                                     <li>
                                         <i>literacy:</i>
                                         <p>abiity to read and write</p>
@@ -520,7 +520,7 @@
                         <h4 id="d20258e527-0" class="subsection">SECTION 1 ASSESSMENT</h4>
                         <p epub:type="bridgehead">Terms &amp; Names</p>
                         <p>1. Identify:</p>
-                        <ul>
+                        <ul  class="staticlist">
                             <li>(a) history</li>
                             <li>(b) geography</li>
                             <li>(c) government</li>
@@ -568,7 +568,7 @@
                         </table>
                         <p epub:type="bridgehead">Main Ideas</p>
                         <p>3.</p>
-                        <ul>
+                        <ul class="staticlist">
                             <li>(a) What five areas of learning does social studies include?</li>
                             <li>(b) What are the three main kinds of resources, and how is each one
                                 defined?</li>
@@ -580,10 +580,9 @@
                             <em>4. Making Inferences</em>
                         </p>
                         <p>Does the United States have a shared or common, culture?</p>
+                        <p epub:type="bridgehead">Think About</p>
                         <ul>
-                            <li>
-                                <p epub:type="bridgehead">Think About</p>
-                            </li>
+                     
                             <li>What you eat and wear, where you live, how you spend your free
                                 time</li>
                             <li>Who else shares these activities with you</li>
@@ -617,7 +616,7 @@
                                 influenced the history of your community? What features or resources
                                 brought settlers there? Choose one of these options. Look in the
                                 Data File for information.</p>
-                            <ul>
+                            <ul class="staticlist">
                                 <li>
                                     <p epub:type="bridgehead">ACTIVITIES</p>
                                 </li>
@@ -667,7 +666,7 @@
                                 to present this information. What will you include in your approach?
                                 How can you add to the globe's popular appeal? Choose one of these
                                 options. Look in the Data File for help.</p>
-                            <ul>
+                            <ul class="staticlist">
                                 <li>
                                     <p epub:type="bridgehead">ACTIVITIES</p>
                                 </li>
@@ -796,7 +795,7 @@
                                 Asica, Australia, and the Pacific Islands. The key is inset at the
                                 bottom of the map and the regions are colour coded.</aside></figcaption>
                         </figure>
-                        <ul class="terms">
+                        <ul epub:type="keywords" class="terms">
                             <li>
                                 <p epub:type="bridgehead">GEOGRAPHY SKILLBUILDER: Interpreting a
                                     Map</p>
@@ -898,7 +897,7 @@
                         <h4 id="d20258e864-0" class="subsection">SECTION 2 ASSESSMENT</h4>
                         <p epub:type="bridgehead">Terms &amp; Names</p>
                         <p>1. Identify:</p>
-                        <ul>
+                        <ul class="staticlist">
                             <li>(a) culture region</li>
                             <li>(b) interdependence</li>
                         </ul>
@@ -918,7 +917,7 @@
                         </ul>
                         <p epub:type="bridgehead">Main Ideas</p>
                         <p>3.</p>
-                        <ul>
+                        <ul class="staticlist">
                             <li>(a) List at least three things people in a culture region may have
                                 in common.</li>
                             <li>(b) Which continents have more than one culture region?</li>
@@ -959,21 +958,21 @@
                         <p>Use the strategies listed below to help you find times and time
                             differences on a time zone map.</p>
                         <p epub:type="bridgehead">How to Read a Time Zone Map</p>
-                        <ul>
+                        <ul class="staticlist">
                             <li>
-                                <span>Strategy 1</span>
+                                <span epub:type="ordinal">Strategy 1</span>
                                 <span>Read the title. It tells you what the map is intended to
                                     show.</span>
                             </li>
                             <li>
-                                <span>Strategy 2</span>
+                                <span epub:type="ordinal">Strategy 2</span>
                                 <span>Read the labels at the top of the map. They show the hours
                                     across the world when it is noon in Greenwich. The labels at the
                                     bottom show the number of hours earlier or later than the time
                                     in Greenwich.</span>
                             </li>
                             <li>
-                                <span>Strategy 3</span>
+                                <span epub:type="ordinal">Strategy 3</span>
                                 <span>Locate a place whose time you know. Locate the place where you
                                     want to know the time. Count the number of time zones between
                                     them. Then add or subtract that number of hours. For example, if
@@ -1080,12 +1079,13 @@
                             other Chinese ethnic groups.</p>
                     </aside>
                 </section>
-                <section class="section" id="d18656e1086">
+                <section class="assessments" id="d18656e1086">
                     <span epub:type="pagebreak" title="30" id="p30"/>
-                    <h3 id="d20258e1033-0" class="section">CHAPTER 1 - ASSESSMENT</h3>
+                    <header><h3 id="d20258e1033-0" class="section"><span class="label">CHAPTER</span><span class="orinal"> 1 </span>- ASSESSMENT</h3></header>
+                    
                     <p epub:type="bridgehead">TERMS &amp; NAMES</p>
                     <p>Explain the significance of each of the following:</p>
-                    <ul>
+                    <ul class="staticlist">
                         <li>1. history</li>
                         <li>2. geography</li>
                         <li>3. government</li>
@@ -1099,7 +1099,7 @@
                     </ul>
                     <p epub:type="bridgehead">REVIEW QUESTIONS</p>
                     <p><em>The World at Your Fingertips</em> (pages 17-21)</p>
-                    <ul>
+                    <ul class="staticlist">
                         <li>1. What are the five themes of geography?</li>
                         <li>2. What are the main differences between a limited and an unlimited
                             government?</li>
@@ -1109,7 +1109,7 @@
                         <li>5. What are some characteristics of a culture?</li>
                     </ul>
                     <p><em>Many Regions, Many Cultures</em> (pages 24-26)</p>
-                    <ul>
+                    <ul  class="staticlist">
                         <li>6. How can decisions made in one part of the world affect people in
                             another part of the world?</li>
                         <li>7. What aspects of daily life might people in the same culture region
@@ -1146,7 +1146,7 @@
                     <section class="subsection" id="d18656e1175">
                         <span epub:type="pagebreak" title="31" id="p31"/>
                         <h4 id="d20258e1121-0" class="subsection">SOCIAL STUDIES SKILLBUILDER</h4>
-                        <ul>
+                        <ul class="staticlist">
                             <li>
                                 <p epub:type="bridgehead">SKILLBUILDER: Reading a Time Zone Map</p>
                             </li>
@@ -1180,7 +1180,7 @@
                     </section>
                     <section class="subsection" id="d18656e1191">
                         <h4 id="d20258e1140-0" class="subsection">FOCUS ON GEOGRAPHY</h4>
-                        <ul>
+                        <ul class="staticlist">
                             <li>1. Human-Environment Interaction • What needs determine where people
                                 settle?</li>
                             <li>2. Place • What geographic features made the location of this town a
