Minor edit to list for formatting
Added staticlist class to list in an assessment section.

--- a/samples/WCAG-ch1/EPUB/WCAG-ch1-2.xhtml
+++ b/samples/WCAG-ch1/EPUB/WCAG-ch1-2.xhtml
@@ -903,7 +903,7 @@
                         </ul>
                         <p epub:type="bridgehead">Taking Notes</p>
                         <p>2. Use a chart to list the major culture regions of the world.</p>
-                        <ul epub:type="practices">
+                        <ul class="staticlist">
                             <li>
                                 <p epub:type="bridgehead">Major Culture Regions of the World</p>
                             </li>
