--- a/samples/WCAG-ch1/EPUB/xhtml/WCAG-ch1-1.xhtml
+++ b/samples/WCAG-ch1/EPUB/xhtml/WCAG-ch1-1.xhtml
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="En-US">
     <head>
         <meta charset="UTF-8"/>
-        <link rel="stylesheet" type="text/css" href="default.css" />
+        <link rel="stylesheet" type="text/css" href="../css/default.css" />
         <title/>
     </head>
     <body xmlns:epub="http://www.idpf.org/2007/ops" id="d20258e6-0" epub:type="frontmatter">
