--- a/samples/WCAG-ch1/EPUB/xhtml/WCAG-ch1-2.xhtml
+++ b/samples/WCAG-ch1/EPUB/xhtml/WCAG-ch1-2.xhtml
@@ -160,7 +160,8 @@
                 </section>
                 <section class="section" id="d18656e211">
                     <span epub:type="pagebreak" title="17" id="p17"></span>
-                    <header><h3 id="d20258e211-0" class="section"><span epub:type="label" class="uc">Section</span>
+                    <header><h3 id="d20258e211-0" class="section"><span epub:type="label" class="uc"
+                                >Section</span>
                             <span epub:type="ordinal">1</span> - The World at Your Fingertips</h3>
                     </header>
                     <aside>
@@ -591,8 +592,7 @@
                                     factory, a computer) and create a map key to identify each product.</li>
                             </ul>
                             <figure>
-                                <img src="../images/wcag-p22-1.jpg"
-                                    alt="Map of the state of Texas"
+                                <img src="../images/wcag-p22-1.jpg" alt="Map of the state of Texas"
                                     id="wcag-p22-1" aria-describedby="pnote-22-1" />
                                 <figure>
                                     <img src="../images/wcag-p22-2.jpg" alt="Capitol Building" id="wcag-p22-2" />
@@ -1078,7 +1078,8 @@
                         <p>People live, dress, and think differently in each of the world's culture
                             regions.</p>
                         <figure>
-                            <img src="../images/wcag-p30-2.jpg" alt="World map" id="wcag-p30-2" aria-describedby="pnote-p30-1" />
+                            <img src="../images/wcag-p30-2.jpg" alt="World map" id="wcag-p30-2"
+                                aria-describedby="pnote-p30-1" />
                             <aside id="pnote-p30-1" class="hidden">
                                 <p>World map, showing the seven culture regions of the world as follows:
                                     United States and Canada; Latin America; Europe and former U.S.S.R.; North
@@ -1125,10 +1126,8 @@
                                 to settle?</li>
                         </ul>
                         <figure>
-                            <img src="../images/wcag-p31-2.jpg"
-                                alt="An illustsrated map"
-                                id="wcag-p31-2"
-                                aria-labelledby="pnote-p31-2"/>
+                            <img src="../images/wcag-p31-2.jpg" alt="An illustsrated map" id="wcag-p31-2"
+                                aria-labelledby="pnote-p31-2" />
                             <aside id="pnote-p31-2" class="hidden">
                                 <p>An illustrated, fictional map showing a town on the mouth of a river, in a
                                     harbor. A compass shows North, South, East and West. Different features of
