add missing keyword semantics

--- a/samples/WCAG-ch1/EPUB/xhtml/WCAG-ch1-2.xhtml
+++ b/samples/WCAG-ch1/EPUB/xhtml/WCAG-ch1-2.xhtml
@@ -177,14 +177,14 @@
                     <aside>
                         <h4 class="uc">Terms &amp; Names</h4>
                         <ul epub:type="keywords" class="keywords">
-                            <li>history</li>
-                            <li>geography</li>
-                            <li>government</li>
-                            <li>citizen</li>
-                            <li>economics</li>
-                            <li>scarcity</li>
-                            <li>culture</li>
-                            <li>culture traits</li>
+                            <li epub:type="keyword">history</li>
+                            <li epub:type="keyword">geography</li>
+                            <li epub:type="keyword">government</li>
+                            <li epub:type="keyword">citizen</li>
+                            <li epub:type="keyword">economics</li>
+                            <li epub:type="keyword">scarcity</li>
+                            <li epub:type="keyword">culture</li>
+                            <li epub:type="keyword">culture traits</li>
                         </ul>
                     </aside>
                     <aside id="d20258e241-0" class="datelinearticle">
@@ -708,8 +708,8 @@
                     <aside>
                         <h4 class="uc">Terms &amp; Names</h4>
                         <ul epub:type="keywords" class="terms">
-                            <li>culture region</li>
-                            <li>interdependence</li>
+                            <li epub:type="keyword">culture region</li>
+                            <li epub:type="keyword">interdependence</li>
                         </ul>
                     </aside>
                     <aside id="d20258e761-0" epub:type="sidebar" class="datelinearticle">
