new samples (not active)

--- a/samples.html
+++ b/samples.html
@@ -53,6 +53,34 @@
                         </td>
                     </tr>
                     <tr>
+                        <th id="english-lang-gcse-aqa">English Language GCSE for AQA: Student Book</th>
+                        <td>
+                            <p>Sample chapters.</p>
+                            <p>Licensing: <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International (CC BY-NC-ND 4.0)</a></p>
+                        </td>
+                        <td>2015-06-04</td>
+                        <td>
+                            <a href="https://drive.google.com/uc?export=download&amp;id=">EPUB 3.0</a>
+                        </td>
+                        <td>
+                            <a href="https://github.com/IDPF/edupub/tree/master/samples/">Browse</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th id="english-lit-aqa">GCSE English Literature for AQA: Poetry Student Book</th>
+                        <td>
+                            <p>Sample chapters.</p>
+                            <p>Licensing: <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International (CC BY-NC-ND 4.0)</a></p>
+                        </td>
+                        <td>2015-06-04</td>
+                        <td>
+                            <a href="https://drive.google.com/uc?export=download&amp;id=">EPUB 3.0</a>
+                        </td>
+                        <td>
+                            <a href="https://github.com/IDPF/edupub/tree/master/samples/">Browse</a>
+                        </td>
+                    </tr>
+                    <tr>
                         <th id="wcag">World Cultures and Geography</th>
                         <td>Sample chapters.</td>
                         <td>2015-06-01</td>
