--- a/samples.html
+++ b/samples.html
@@ -55,7 +55,7 @@
                     <tr>
                         <th id="english-lang-gcse-aqa">English Language GCSE for AQA: Student Book</th>
                         <td>
-                            <p>Sample chapters.</p>
+                            <p>(Coming soon.)</p>
                             <p>Licensing: <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International (CC BY-NC-ND 4.0)</a></p>
                         </td>
                         <td>2015-06-04</td>
@@ -69,7 +69,7 @@
                     <tr>
                         <th id="english-lit-aqa">GCSE English Literature for AQA: Poetry Student Book</th>
                         <td>
-                            <p>Sample chapters.</p>
+                            <p>(Coming soon.)</p>
                             <p>Licensing: <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International (CC BY-NC-ND 4.0)</a></p>
                         </td>
                         <td>2015-06-04</td>
