updated sample descriptions

--- a/samples.html
+++ b/samples.html
@@ -32,7 +32,10 @@
                     </tr>
                     <tr>
                         <th id="linear-algebra">Linear Algebra</th>
-                        <td>Sample chapters.</td>
+                        <td>
+                            <p>A First Course in Linear Algebra, available in its canonical version at <a href="http://linear.ups.edu">http://linear.ups.edu</a>. This sample contains substantive amounts of MathML.</p>
+                            <p>Licensing: <a href="http://www.gnu.org/copyleft/fdl.html">GNU FDL 1.2</a></p>
+                        </td>
                         <td>2015-01-15</td>
                         <td>
                             <a href="https://drive.google.com/uc?export=download&amp;id=0B9g8D2Y-6aPLeHBQRHhZSXZEVzg">EPUB 3.0</a>
@@ -43,7 +46,7 @@
                     </tr>
                     <tr>
                         <th id="structure">EDUPUB Structure Sample</th>
-                        <td>Sample chapters.</td>
+                        <td>An instructive sample designed to show the structural markup patterns defined in the <a href="http://www.idpf.org/epub/profiles/edu/structure/">EDUPUB Structural Semantics vocabulary</a>, as well as the application of the <a href="http://www.idpf.org/epub/profiles/edu/res/sample.css">sample CSS</a>. (Note: this sample is composed primarily of lorem ipsum text.)</td>
                         <td>2015-01-15</td>
                         <td>
                             <a href="https://drive.google.com/uc?export=download&amp;id=0B9g8D2Y-6aPLd2FiMExCbXdVRUU">EPUB 3.0</a>
@@ -82,8 +85,11 @@
                     </tr>
                     <tr>
                         <th id="wcag">World Cultures and Geography</th>
-                        <td>Sample chapters.</td>
-                        <td>2015-06-01</td>
+                        <td>
+                            <p>Sample chapter from a typical K-12 textbook.</p>
+                            <p>Licensing: See the <a href="https://github.com/IDPF/edupub/blob/master/samples/WCAG-ch1/EPUB/package.opf">package file</a> for usage restrictions.</p>
+                        </td>
+                        <td>2015-06-04</td>
                         <td>
                             <a href="https://drive.google.com/uc?export=download&amp;id=0B9g8D2Y-6aPLeWtKeVVjMTRXNVE">EPUB 3.0</a>
                         </td>
